# optima

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
docs/: DEV_ENVIRONMENT.md  EMISSIONS_POLICY.md  FIDELITY.md  GPU_SETUP.md  HOW_OPTIMA_WORKS.md  INCENTIVES.md  INCENTIVE_LOAD_VALIDATION.md  MINER_GUIDE.md  PRODUCT_CONTRACT.md  REFEREE_HARDENING_AUDIT.md  REFEREE_HARDENING_SPLIT_PLAN.md  SGLANG_TRACKING.md  SLOT_CONTRACT.md  STATE_OF_RECORD.md  SUBMISSION_MODEL.md  SUBMISSION_MODEL_BUILD_SPEC.md  SUBMISSION_TERMS.md  SUBNET_BLUEPRINT.md  TESTNET.md  index.md  requirements.txt
optima/: _strict.py  arena_service.py  arenas.py  artifact_abi.py  artifact_device_launch.py  artifact_identity.py  artifact_provider.py  artifact_resource_identity.py  artifact_runtime.py  audit.py  blessed_base.py  bootstrap.py  bundle_hash.py  capabilities.py  chain.py  chain_canary.py  cli.py  commit_reveal.py  compat.py  copy_fingerprint.py  cuda_cubin.py  cuda_launch.py  cuda_materialize.py  cute_aot.py  cute_aot_child.py  cute_cubin.py  dep_policy.py  deppatch.py  discovery.py  discovery_overlay.py  dispatch.py  dsl_jit_policy.py  economics.py  engine_tree.py  manifest.py  model_provision.py  moe_export.py  object_store.py  rebuild.py  receipts.py  (+15 more)
optima_kernels/: __init__.py  override.py
scripts/: check_docs.py  check_referee_evidence.py  check_sglang.py  d015_launch_load.py
tests/: test_arena_service.py  test_arenas.py  test_arfusion_seam.py  test_artifact_abi.py  test_artifact_device_launch.py  test_artifact_resources.py  test_artifact_runtime.py  test_benchmarks.py  test_calibration.py  test_capabilities.py  test_chain.py  test_chain_canary.py  test_chain_fetch.py  test_chain_intake.py  test_chain_payload.py  test_chain_publication.py  test_chain_validator_loop.py  test_cli_chain.py  test_cli_debt_weights.py  test_cli_diagnostics.py  test_cli_verify_variants.py  (+91 more)
(+215 files in other folders)
