[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "optima-harness"
version = "0.0.1"
description = "Validator harness for an inference-throughput competition on SGLang"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
# torch is required but intentionally NOT pinned here: install the build that
# matches the validator's CUDA/SGLang environment first, then `pip install -e .`.
dependencies = [
  # Python 3.11+ has tomllib in the stdlib; 3.10 needs the same parser API.
  "tomli>=2; python_version<'3.11'",
]

[project.optional-dependencies]
# CPU dry-run / laptop development: pulls in the torch the core deliberately
# leaves unpinned (a GPU box gets its torch from the sglang/CUDA install
# instead — see docs/GPU_SETUP.md). `pip install -e ".[cpu,dev]"` is the
# documented no-GPU quickstart. Note: on Linux the default torch wheel bundles
# CUDA libs (heavier download); for a lean CPU-only install do
# `pip install torch --index-url https://download.pytorch.org/whl/cpu` first.
cpu = ["torch"]
dev = ["pytest>=7"]
release = ["cryptography>=41"]

[project.scripts]
optima = "optima.cli:main"

[tool.setuptools]
license-files = ["LICENSE", "NOTICE", "LICENSES/*.txt"]

[tool.setuptools.package-data]
"optima" = ["vendor_provenance.json"]
"optima.eval" = ["seccomp_moby_v0_2_1.json"]
"optima.arena_assets.minimax_m3.sglang_patch" = ["*.py"]
"optima_kernels.collective" = ["*.cu"]

# Installs the Optima seam inside every SGLang process (incl. the spawned
# scheduler that runs the model). This is validator-owned code. Select it with
# SGLANG_PLUGINS=optima (the eval harness sets this automatically).
[project.entry-points."sglang.srt.plugins"]
optima = "optima.integrations.sglang_plugin:register"

[tool.setuptools.packages.find]
include = ["optima*"]
exclude = ["sglang*", "examples*", "tests*"]
